npm install に対応2

--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.0.1",
   "main": "index.js",
   "license": "MIT",
+  "author": "hamaike",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/@m-lab-inc/global-txt-builder.git"
+  },
   "bin": {
     "create-global-txt": "./dist/index.js"
   },
