--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@m-lab-inc/global-txt-builder",
-  "version": "0.0.2",
+  "version": "0.0.9",
   "main": "dist/index.js",
   "license": "MIT",
   "author": "hamaike",
@@ -11,20 +11,22 @@
     "url": "git://github.com/@m-lab-inc/global-txt-builder.git"
   },
   "bin": {
-    "create-global-txt": "./dist/index.js"
+    "create-global-txt": "dist/index.js"
   },
   "scripts": {
-    "build": "tsc index.ts",
+    "build": "tsc",
     "start": "tsc && node ./dist/index.js 'http://localhost:5555' '/Users/hamaike/src/global-txt-builder/outputs' '/Users/hamaike/src/v-expo-3d/src' "
   },
-  "devDependencies": {
+  "dependencies": {
     "@babel/parser": "^7.23.6",
     "@babel/traverse": "^7.23.6",
-    "@types/babel__traverse": "^7.20.4",
-    "@types/node": "^20.10.5",
-    "@types/node-fetch": "2",
     "glob": "^10.3.10",
-    "node-fetch": "2",
+    "node-fetch": "2"
+  },
+  "devDependencies": {
+    "@types/babel__traverse": "7.20.4",
+    "@types/node": "20.10.5",
+    "@types/node-fetch": "2",
     "prettier": "^3.1.1",
     "typescript": "^5.3.3"
   },
