--- a/package.json
+++ b/package.json
@@ -27,7 +27,12 @@
     "@types/babel__traverse": "7.20.4",
     "@types/node": "20.10.5",
     "@types/node-fetch": "2",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
+    "next": "13",
     "prettier": "^3.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "typescript": "^5.3.3"
   },
   "prettier": {
