--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@babel/parser": "^7.23.6",
     "@babel/traverse": "^7.23.6",
+    "fs": "^0.0.1-security",
     "glob": "^10.3.10",
     "node-fetch": "2"
   },
